# rotor-qt

./: CMakeLists.txt  LICENSE  README.md  appicon.rc  main.cpp  manager.cpp  manager.h  resources.qrc  rotor.cpp  rotor.h
FileData/: file_data.cpp  file_data.h  filedata.cpp  filedata.h  volume.cpp  volume.h
GUI/: w_searcher.cpp  w_searcher.h  w_setting.cpp  w_setting.h
GUI/Components/: search_result_list.cpp  search_result_list.h  searchresultlist.cpp  searchresultlist.h
GUI/Parents/: w_normalwidget.cpp  w_normalwidget.h  w_normalwindow.cpp  w_normalwindow.h
Model/: settingmodel.cpp  settingmodel.h
Models/: setting_model.cpp  setting_model.h
Modules/: i_module.h
Modules/ScreenShotter/: screen_shotter.cpp  screen_shotter.h
Modules/ScreenShotter/Components/: amplifier.cpp  amplifier.h  rect_view.cpp  rect_view.h  shotter_screen.cpp  shotter_screen.h  shotter_window.cpp  shotter_window.h  toolbar.cpp  toolbar.h
Modules/Searcher/: searcher.cpp  searcher.h
Modules/Searcher/Components/: search_result_list.cpp  search_result_list.h
Modules/Searcher/FileData/: file_data.cpp  file_data.h  volume.cpp  volume.h
Modules/Searcher/GUI/: w_searcher.h
Modules/Searcher/GUI/Components/: search_result_list.h
Utils/: UAC.h  commonUtils.h  hotkey.h  powerboot.h
